force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Tool_Kit_ordered_Todd_Balduf__c.field-meta.xml
<CustomField>
    <fullName>Tool_Kit_ordered_Todd_Balduf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tool Kit ordered (Todd Balduf)</label>
    <type>Checkbox</type>
</CustomField>