force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Trained_in_Internal_Sales_Resources__c.field-meta.xml
<CustomField>
    <fullName>Trained_in_Internal_Sales_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trained in Internal Sales Resources</label>
    <type>Checkbox</type>
</CustomField>