force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Update_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Update_Contact_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Contact List</label>
    <type>Checkbox</type>
</CustomField>