force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Update_Org_Chart__c.field-meta.xml
<CustomField>
    <fullName>Update_Org_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Org Chart</label>
    <type>Checkbox</type>
</CustomField>