force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Webex__c.field-meta.xml
<CustomField>
    <fullName>Webex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webex</label>
    <type>Checkbox</type>
</CustomField>