force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/Welcome_Announce_rqst__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Announce_rqst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Announce rqst</label>
    <type>Checkbox</type>
</CustomField>