force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/ZB_Connect_Team__c.field-meta.xml
<CustomField>
    <fullName>ZB_Connect_Team__c</fullName>
    <label>ZB Connect Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>My Mobility</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>Str. Contracting</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>