force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/fields/ZB_Sales_Hub__c.field-meta.xml
<CustomField>
    <fullName>ZB_Sales_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ZB Sales Hub</label>
    <type>Checkbox</type>
</CustomField>