force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/recordTypes/ROSA_AVP.recordType-meta.xml
<RecordType>
    <fullName>ROSA_AVP</fullName>
    <active>true</active>
    <label>ROSA AVP</label>
</RecordType>