force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/recordTypes/ROSA_PDM.recordType-meta.xml
<RecordType>
    <fullName>ROSA_PDM</fullName>
    <active>true</active>
    <description>ROSA PDM record type.</description>
    <label>ROSA PDM</label>
</RecordType>