force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/recordTypes/ROSA_RSM.recordType-meta.xml
<RecordType>
    <fullName>ROSA_RSM</fullName>
    <active>true</active>
    <description>ROSA RSM record type.</description>
    <label>ROSA RSM</label>
</RecordType>