force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/recordTypes/ZB_Surgical.recordType-meta.xml
<RecordType>
    <fullName>ZB_Surgical</fullName>
    <active>true</active>
    <description>ZB Surgical HR Onboardings</description>
    <label>ZB Surgical</label>
</RecordType>