force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>All_Tasks_Complete__c</columns>
    <columns>RSD__c</columns>
    <columns>SST_Notified_of_New_Hire__c</columns>
    <columns>Completed_By_Field_Training_Scheduled_as__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>