force-app/main/default/objects/ZB_Connect_HR_Onboarding__c/listViews/ZB_Connect_HR_Onboarding.listView-meta.xml
<ListView>
    <fullName>ZB_Connect_HR_Onboarding</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Position_Name__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>ZB_Connect_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>ZB Connect HR Onboarding</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>ZimmerSurgicalPresident</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>